name:                proficiency
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/robrix/proficiency#readme
license:             BSD3
license-file:        LICENSE
author:              Rob Rix
maintainer:          rob.rix@me.com
copyright:           Rob Rix
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Prof.Renderer
  build-depends:       base >= 4.7 && < 5
                     , blaze-html
                     , blaze-markup
                     , blaze-svg
                     , bytestring
                     , containers
                     , ghc-events-parallel
                     , ghc-prof
                     , Glob
                     , hp2any-core
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/robrix/proficiency
